# instagram-server-django

./: db.sqlite3  pyproject.toml
common/: models.py
config/: settings.py  urls.py
feeds/: admin.py  models.py  serializers.py  urls.py  views.py
feeds/migrations/: 0001_initial.py  0002_auto_20230222_1122.py  0003_alter_feed_id.py  0004_alter_feed_contentimg.py  0005_alter_feed_contentimg.py  0006_alter_feed_contentimg.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_auto_20230222_1122.py  0003_alter_review_id.py
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20230222_1122.py  0003_alter_user_id.py
